# theEscapistsProg2

./: .gitignore  CMakeLists.txt  Inmate.cpp  Inmate.h  LuizJordanyDeSousaSilva_AtividadeHeranca.h  README.md  main  main.cpp  main.out  saves.json  teste.cpp  text.json
CImg-3.3.2/: README.txt
include/: BotInmate.h  Data.h  Inmate.h  Item.h  JobBoard.h  PlayerInmate.h  Prison.h  ScapeTool.h  Shovel.h  Time.h  datas.txt  util.h
src/: BotInmate.cpp  Data.cpp  Inmate.cpp  Item.cpp  JobBoard.cpp  PlayerInmate.cpp  Prison.cpp  ScapeTool.cpp  Shovel.cpp  Time.cpp
utils/: configs.txt  configs2.txt  configs3.txt  logoFigure.txt  newGameAndContinueFigure.txt  newGameFigure.txt  playAndContinueFigures.txt  prisonArts.txt  teste.txt
utils/Items/: Book.txt  BrassKnuckles.txt  CorrespondenceLetter.txt  Fabric.txt  Hoe.txt  Key1.txt  Key5.txt  Knife.txt  MasterKey.txt  Mop.txt  PlasticKey5.txt  Pliers.txt  ToolHandle.txt  guard outfit.txt  inmate outfit.txt  key2.txt  key3.txt  key4.txt  knife.txt  plastic key1.txt  plastic key2.txt  plastic key3.txt  plastic key4.txt  plastic.txt  sheet metal.txt  shovel.txt  soap.txt
utils/gifs/: loading.bash
